--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -80,40 +80,135 @@
             android:id="@+id/profile_info_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginRight="@dimen/margin_10"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:id="@+id/first_name_layout"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/profile_item_bg"
-                android:padding="@dimen/margin_10">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-                <TextView
-                    android:id="@+id/first_name_text"
-                    android:layout_width="wrap_content"
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="First Name" />
+                    android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/first_name"
-                    android:layout_width="wrap_content"
+                    <EditText
+                        android:id="@+id/first_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:hint="First Name"
+                        android:inputType="text"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@android:color/black" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/first_name_text"
-                    android:text="Master"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/last_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:hint="Last Name"
+                        android:inputType="text"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="@android:color/black" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Phone Number"
+                    android:inputType="text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_16" />
+                    android:textColorHint="@android:color/black" />
+            </android.support.design.widget.TextInputLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>
+                    android:layout_marginBottom="10dp"
+                    android:hint="Email"
+                    android:inputType="text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@android:color/black" />
+            </android.support.design.widget.TextInputLayout>
 
-            <RelativeLayout
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_20"
+                android:background="@color/colorAccent"
+                android:text="Save"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/change_password"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10"
+                android:background="@null"
+                android:text="@string/change_pasword"
+                android:textAllCaps="false"
+                android:textColor="@color/colorAccent" />
+
+
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/first_name_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/profile_item_bg"-->
+            <!--android:padding="@dimen/margin_10">-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/first_name_text"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:text="First Name" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/first_name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/first_name_text"-->
+            <!--android:text="Master"-->
+            <!--android:textColor="@android:color/black"-->
+            <!--android:textSize="@dimen/text_size_16" />-->
+
+            <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
+            <!--</RelativeLayout>-->
+
+            <!--<RelativeLayout
                 android:id="@+id/last_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -142,100 +237,100 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>
+            </RelativeLayout>-->
 
-            <RelativeLayout
-                android:id="@+id/phone_number_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/profile_item_bg"
-                android:padding="@dimen/margin_10">
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/phone_number_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/profile_item_bg"-->
+            <!--android:padding="@dimen/margin_10">-->
 
-                <TextView
-                    android:id="@+id/phone_number_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="Phone Number" />
+            <!--<TextView-->
+            <!--android:id="@+id/phone_number_text"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:text="Phone Number" />-->
 
-                <TextView
-                    android:id="@+id/phone_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/phone_number_text"
-                    android:text="01629121345"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_16" />
+            <!--<TextView-->
+            <!--android:id="@+id/phone_number"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/phone_number_text"-->
+            <!--android:text="01629121345"-->
+            <!--android:textColor="@android:color/black"-->
+            <!--android:textSize="@dimen/text_size_16" />-->
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>
+            <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
+            <!--</RelativeLayout>-->
 
-            <RelativeLayout
-                android:id="@+id/email_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/profile_item_bg"
-                android:padding="@dimen/margin_10">
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/email_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/profile_item_bg"-->
+            <!--android:padding="@dimen/margin_10">-->
 
-                <TextView
-                    android:id="@+id/email_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="Email" />
+            <!--<TextView-->
+            <!--android:id="@+id/email_text"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:text="Email" />-->
 
-                <TextView
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/email_text"
-                    android:text="master@gmail.com"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_16" />
+            <!--<TextView-->
+            <!--android:id="@+id/email"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/email_text"-->
+            <!--android:text="master@gmail.com"-->
+            <!--android:textColor="@android:color/black"-->
+            <!--android:textSize="@dimen/text_size_16" />-->
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>
+            <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
+            <!--</RelativeLayout>-->
 
-            <RelativeLayout
-                android:id="@+id/password_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/profile_item_bg"
-                android:padding="@dimen/margin_10">
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/password_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/profile_item_bg"-->
+            <!--android:padding="@dimen/margin_10">-->
 
-                <TextView
-                    android:id="@+id/password_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="Password" />
+            <!--<TextView-->
+            <!--android:id="@+id/password_text"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:text="Password" />-->
 
-                <TextView
-                    android:id="@+id/password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/password_text"
-                    android:text="******"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_16" />
+            <!--<TextView-->
+            <!--android:id="@+id/password"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/password_text"-->
+            <!--android:text="******"-->
+            <!--android:textColor="@android:color/black"-->
+            <!--android:textSize="@dimen/text_size_16" />-->
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>
+            <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
+            <!--</RelativeLayout>-->
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
