--- a/app/src/main/res/layout/merchant_main_activity.xml
+++ b/app/src/main/res/layout/merchant_main_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MainActivity">
+    tools:context=".Activity.ClientMainActivity">
 
     <FrameLayout
         android:id="@+id/frame"
@@ -22,7 +22,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/menu_bottom_navigation" />
+        app:menu="@menu/menu_merchant_navigation" />
 
 
 </android.support.constraint.ConstraintLayout>
