--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,7 +50,7 @@
         app:layout_anchorGravity="center" />
 
     <ImageView
-        android:id="@+id/edit_profile"
+        android:id="@+id/change_cover_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"
