--- a/app/src/main/res/layout/transaction_fragment_layout.xml
+++ b/app/src/main/res/layout/transaction_fragment_layout.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/margin_5">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/transaction_details_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
