Adding slider fuctionality

--- a/app/src/main/res/layout/store_offer_layout.xml
+++ b/app/src/main/res/layout/store_offer_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/bd_wireless_m" />
+                android:src="@drawable/deli_grocery_m" />
 
             <LinearLayout
                 android:id="@+id/item_tag"
