--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -78,8 +78,8 @@
                         </LinearLayout>
 
                         <RatingBar
-                            android:id="@+id/ratingBar1"
-                            style="?android:attr/ratingBarStyleSmall"
+                            android:id="@+id/ratingBar"
+                            style="@style/CustomRatingBar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/follow_layout"
