Category is now dynamic

--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -63,6 +63,8 @@
             android:textColor="#006ff1" />
     </RelativeLayout>
 
+    <include layout="@layout/progress_layout"></include>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/transaction_rv"
         android:layout_width="match_parent"
