--- a/app/src/main/res/layout/stores_fragment_layout.xml
+++ b/app/src/main/res/layout/stores_fragment_layout.xml
@@ -34,6 +34,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="@dimen/margin_20"
                 android:background="?selectableItemBackground"
+                android:padding="@dimen/margin_10"
                 android:src="@drawable/ic_search_normal" />
 
         </android.support.v7.widget.Toolbar>
