Category is now dynamic

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="mastersunny.unitedclub.Activity.ChangePasswordActivity">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,9 +11,8 @@
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/back_button"
@@ -25,8 +21,13 @@
                 android:background="?selectableItemBackground"
                 android:padding="@dimen/margin_10"
                 android:src="@drawable/ic_chevron_left_black_24dp" />
-        </LinearLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Change phone number" />
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
@@ -41,16 +42,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="Current Password" />
+            android:text="Current phone number" />
 
         <EditText
-            android:id="@+id/current_password"
+            android:id="@+id/current_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="@dimen/margin_10"
-            android:inputType="textPassword"
+            android:inputType="phone"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black" />
@@ -59,16 +60,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="New Password" />
+            android:text="New phone number" />
 
         <EditText
-            android:id="@+id/new_password"
+            android:id="@+id/new_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="@dimen/margin_10"
-            android:inputType="textPassword"
+            android:inputType="phone"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black" />
@@ -80,13 +81,13 @@
             android:text="Confirm New Password" />
 
         <EditText
-            android:id="@+id/confirm_new_password"
+            android:id="@+id/confirm_new_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="@dimen/margin_10"
-            android:inputType="text"
+            android:inputType="phone"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black" />
@@ -97,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_10"
             android:background="@color/colorAccent"
-            android:text="Change Password"
+            android:text="Save"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </RelativeLayout>
