--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -54,6 +54,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin_10"
             android:layout_marginRight="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
             android:orientation="vertical">
 
             <LinearLayout
