swipe refresh added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="grey_lite">#a4a4a4</color>
     <color name="item_details">#30404f</color>
     <color name="dark_grey">#888888</color>
+    <color name="green">#008000</color>
+    <color name="red">#FF0000</color>
 </resources>
