--- a/app/src/main/res/layout/transaction_layout.xml
+++ b/app/src/main/res/layout/transaction_layout.xml
@@ -66,6 +66,6 @@
             android:layout_below="@+id/offer_date_layout"
             android:paddingTop="@dimen/margin_5"
             android:text="Paid"
-            android:textColor="#006ff1" />
+            android:textColor="@color/green" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
