--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -95,85 +95,159 @@
                     android:text="Description"
                     android:textColor="#2c3f51" />
 
-                <TextView
-                    android:id="@+id/client_name"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_20"
-                    android:gravity="left"
-                    android:text="Client: "
-                    android:textColor="#838383"
-                    android:textSize="@dimen/text_size_13" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Client: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                    <TextView
+                        android:id="@+id/client_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:gravity="left"
+                        android:text="Mr. client"
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_5"
-                    android:gravity="left"
-                    android:text="Email: "
-                    android:textColor="#838383"
-                    android:textSize="@dimen/text_size_13" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/phone_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:gravity="left"
-                    android:text="Phone Number: "
-                    android:textColor="#838383"
-                    android:textSize="@dimen/text_size_13" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Email: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
 
-                <TextView
-                    android:id="@+id/transaction_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:gravity="left"
-                    android:text="Transaction Date: "
-                    android:textColor="#838383"
-                    android:textSize="@dimen/text_size_13" />
+                    <TextView
+                        android:id="@+id/email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:gravity="left"
+                        android:text="Email: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
 
-                <TextView
-                    android:id="@+id/total_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:gravity="left"
-                    android:text="Total amount: "
-                    android:textColor="#838383"
-                    android:textSize="@dimen/text_size_13" />
+                </LinearLayout>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/accept"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_marginTop="@dimen/margin_20"
-                        android:layout_weight="1"
-                        android:background="#0d5ada"
-                        android:text="Accept"
-                        android:textColor="@android:color/white"
-                        android:visibility="visible" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Phone Number: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
 
-                    <Button
-                        android:id="@+id/reject"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                    <TextView
+                        android:id="@+id/phone_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/margin_5"
-                        android:layout_marginTop="@dimen/margin_20"
-                        android:layout_weight="1"
-                        android:background="@color/red"
-                        android:text="Reject"
-                        android:textColor="@android:color/white"
-                        android:visibility="visible" />
+                        android:gravity="left"
+                        android:text="01: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Transaction Date: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                    <TextView
+                        android:id="@+id/transaction_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:gravity="left"
+                        android:text="01: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Total Amount: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                    <TextView
+                        android:id="@+id/total_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:gravity="left"
+                        android:text=""
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Status: "
+                        android:textColor="#838383"
+                        android:textSize="@dimen/text_size_13" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:gravity="left"
+                        android:text="Pending"
+                        android:textColor="@color/red"
+                        android:textSize="@dimen/text_size_13" />
 
                 </LinearLayout>
             </LinearLayout>
