--- a/app/src/main/res/layout/pending_item_layout.xml
+++ b/app/src/main/res/layout/pending_item_layout.xml
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/margin_10"
                 android:text="PENDING"
-                android:textColor="@color/item_details"
+                android:textColor="@color/red"
                 android:textSize="@dimen/margin_12"
                 android:visibility="visible" />
 
