--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="mastersunny.unitedclub.Activity.ScrollingActivity">
+    tools:context="mastersunny.unitedclub.activities.ScrollingActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
